# cp_clothes_db

./: CMakeLists.txt  README.md  package.xml  save_bag.sh
include/: cp_clothes_db.h
launch/: cp_clothes_db_xtion1.launch  cp_clothes_db_xtion2.launch
src/: cp_clothes_db.cpp
